--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
     "import/extensions": [
       0
     ],
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-filename-extension": [0],
     "jsx-a11y/no-static-element-interactions": "off",
     "max-len": [
       1,
