--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
@@ -37,16 +42,17 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "html-loader": "^1.3.0",
-    "html-webpack-plugin": "^4.3.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^3.0.2",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "eslint-config-airbnb": "^18.2.0",
+    "file-loader": "^6.0.0",
     "happypack": "^5.0.1",
-    "hard-source-webpack-plugin": "^0.13.1"
+    "hard-source-webpack-plugin": "^0.13.1",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.3.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
