--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,7 @@
     "react/jsx-max-props-per-line": "off",
     "react/jsx-tag-spacing": "off",
     "react/no-array-index-key": "off",
-    "react/no-access-state-in-setstate": "off"
+    "react/no-access-state-in-setstate": "off",
+    "react/static-property-placement": "off"
   }
 }
