--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,11 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+#        url: '%env(resolve:DATABASE_URL)%'
+        driver:   pdo_mysql
+        host:     '%database_host%'
+        dbname:   '%database_name%'
+        user:     '%database_user%'
+        password: '%database_password%'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '5.7'
@@ -15,4 +19,11 @@ doctrine:
                 type: annotation
                 dir: '%kernel.project_dir%/src/Web/Entity'
                 prefix: 'App\Web\Entity'
+                alias: App
+
+            App\Core:
+                is_bundle: false
+                type: annotation
+                dir: '%kernel.project_dir%/src/Core/Entity'
+                prefix: 'App\Core\Entity'
                 alias: App
