--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    database_host:     localhost
+    database_name:     probka_shop
+    database_user:     root
+    database_password: root
 
 services:
     # default configuration for services in *this* file
@@ -14,12 +18,28 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\Web\:
-        resource: '../src/Web/'
+        resource: '../src/Web/*'
         exclude:
             - '../src/Web/DependencyInjection/'
             - '../src/Web/Entity/'
-            - '../src/Web/Kernel.php'
+            - '../src/Kernel.php'
             - '../src/Web/Tests/'
+
+    App\API\:
+        resource: '../src/API/*'
+        exclude:
+            - '../src/API/DependencyInjection/'
+            - '../src/API/Entity/'
+            - '../src/Kernel.php'
+            - '../src/API/Tests/'
+
+    App\Core\:
+        resource: '../src/Core/*'
+        exclude:
+            - '../src/Core/DependencyInjection/'
+            - '../src/Core/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Core/Tests/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -27,5 +47,12 @@ services:
         resource: '../src/Web/Controller/'
         tags: ['controller.service_arguments']
 
+    App\API\Controller\:
+        resource: '../src/API/Controller/'
+        tags: [ 'controller.service_arguments' ]
+
+    App\Core\Controller\:
+        resource: '../src/Core/Controller/'
+        tags: [ 'controller.service_arguments' ]
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
