--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "mdbreact": "^4.27.0",
+    "numeral": "^2.0.6",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
