--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,11 +1,6 @@
 doctrine:
     dbal:
-#        url: '%env(resolve:DATABASE_URL)%'
-        driver:   pdo_mysql
-        host:     '%database_host%'
-        dbname:   '%database_name%'
-        user:     '%database_user%'
-        password: '%database_password%'
+        url: '%env(resolve:DATABASE_URL)%'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '5.7'
