--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
         "symfony/web-link": "5.1.*",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-xmlreader": "*",
+      "ext-dom": "*",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "symfony/browser-kit": "^5.1",
